Added support to end participation in study
