# src/controllers/ParticipantController.ts
@@ -50,7 +50,10 @@ export class ParticipantController {
                     COMPASSConfig.getInitialQuestionnaireId(),
                 additional_iterations_left: participant.additional_iterations_left,
                 current_interval: participant.current_interval,
-                recipient_certificate_pem_string: COMPASSConfig.getRecipientCertificate()
+                recipient_certificate_pem_string: COMPASSConfig.getRecipientCertificate(),
+                subject_participation: participant.subject_participation,
+                general_study_end_date: participant.general_study_end_date,
+                personal_study_end_date: participant.personal_study_end_date
             };
             return resp.status(200).json(returnObject);
         } catch (err) {
