# src/types/ParticipantEntry.ts
@@ -5,6 +5,10 @@
 /**
  * Represents an entry in the "studyparticipant" table.
  */
+export enum ParticipationStatus {
+    OnStudy = 'on-study',
+    OffStudy = 'off-study'
+}
 export interface ParticipantEntry {
     subject_id: string;
     last_action: Date;
@@ -14,4 +18,7 @@ export interface ParticipantEntry {
     current_instance_id: string;
     current_interval: number;
     additional_iterations_left: number;
+    subject_participation: ParticipationStatus;
+    general_study_end_date: Date;
+    personal_study_end_date: Date;
 }
